# Delphi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cliff.toml  docker-compose.cloud.yml  docker-compose.distributed.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/architecture/: agentic-rag.md  data-pipeline.md  evaluation.md  graph-rag.md  index.md  inference.md  intent-routing.md  models.md  rag.md  session.md  telemetry.md  vector-db.md  websocket.md
docs/comparison/: code-parsing.md  competitors.md  embedding-models.md  languages.md  llm-inference.md  rag-frameworks.md  reranker-models.md  vector-databases.md
docs/concepts/core/: context-window.md  embedding.md  evaluation.md  hybrid-search.md  llm.md  openai-api.md  prompt-engineering.md  rag.md  reranker.md  sse.md  vector-database.md
docs/concepts/data/: chunking.md  incremental-update.md  metadata.md  tokenization.md  tree-sitter.md  whisper.md
docs/concepts/model/: lora.md  moe.md  paged-attention.md  quantization.md
docs/concepts/tools/: bgem3.md  docker-compose.md  llamaindex.md  qdrant.md  vllm.md
docs/deployment/: api.md  ci-cd.md  config.md  distributed.md  docker.md  hardware.md  index.md  observability.md
docs/guide/: cli-reference.md  data-import.md  evaluation.md  fine-tuning.md  index.md  model-management.md  quickstart.md  roadmap.md  scheduler.md  testing.md
docs/mvp/: api-server.md  cli.md  doc-import.md  docker-setup.md  git-import.md  index.md  rag-pipeline.md
src/delphi/: __init__.py  __main__.py  cli.py
src/delphi/api/: app.py  models.py  websocket.py
src/delphi/core/: __init__.py  cache.py  clients.py  config.py  logging.py  task_store.py  telemetry.py
src/delphi/evaluation/: dataset.py  metrics.py  runner.py
src/delphi/finetune/: exporter.py  generator.py
src/delphi/graph/: extractor.py  store.py
src/delphi/ingestion/: chunker.py  doc_chunker.py  doc_pipeline.py  git.py  incremental.py  media_chunker.py  media_pipeline.py  models.py  pipeline.py  upload.py
tests/: test_agent.py  test_api_routes.py  test_cache.py  test_chunker.py  test_cli.py  test_clients.py  test_doc_chunker.py  test_finetune.py  test_generate.py  test_git.py  test_git_cache.py  test_graph.py  test_health.py  test_incremental.py  test_integration.py  test_intent.py  test_models.py  test_rag.py  test_session.py  test_upload.py
tests/e2e/: test_query_flow.py
tests/integration/: conftest.py  test_api_endpoints.py  test_ingestion_pipeline.py  test_rag_pipeline.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: api.ts  chatPanel.ts  extension.ts
web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  db.ts  index.css  main.tsx  store.ts  types.ts
(+89 files in other folders)
