[project]
name = "delphi"
version = "0.1.0"
description = "可离线部署的本地知识库系统"
readme = "README.md"
authors = [
    { name = "Steven Moder", email = "java20131114@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "typer>=0.15",
    "rich>=13.9",
]

[project.scripts]
delphi = "delphi.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx",
    "pre-commit>=4.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["delphi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
